# vscode-update

./: .gitignore  Cargo.toml  vscodeup.nim
src/: logging.rs  main.rs
